fix image stretching issues

--- a/backend/static/less/src/style.less
+++ b/backend/static/less/src/style.less
@@ -35,9 +35,9 @@ body {
     border-style: dashed;
     border-color: white;
     border-width: 4px;
-    width:33vw;
-    height:33vw;
     position: relative;
+    max-width: 50vw;
+    max-height: 50vh;
 
     > input[type="file"] {
         position: absolute;
@@ -48,6 +48,11 @@ body {
     > img {
         width: 100%;
         height: 100%;
+    }
+
+    .upload-button, #spinner {
+        width:33vw;
+        height:33vw;
     }
 }
 
@@ -62,15 +67,7 @@ body {
     }
 }
 
-#photo {
-    width: 100%;
-    height: 100%;
-    display: none;
-}
-
-#photo2 {
-    width: 100%;
-    height: 100%;
+#photo, #photo2 {
     display: none;
 }
 
@@ -90,8 +87,6 @@ body {
 }
 
 #spinner {
-    width: 100%;
-    height: 100%;
     position: absolute;
     left: 50%;
     top: 50%;
